crates/narrative/tests/compile-fail/invalid-item-in-story.stderr
error: expected a step or const
 --> tests/compile-fail/invalid-item-in-story.rs:4:5
  |
4 |     type SomeType = String;
  |     ^^^^
